[package]
authors = ["Jason Ozias <jason.g.ozias@gmail.com>"]
description = "A small utility to create hexdump output from byte slices"
documentation = "https://docs.rs/hxdmp"
edition = "2018"
homepage = "https://github.com/rustyhorde/hxdmp"
keywords = [
    "hex",
    "hexdump"
]
license = "MIT/Apache-2.0"
name = "hxdmp"
readme = "README.md"
repository = "https://github.com/rustyhorde/hxdmp"
version = "0.2.1"

[dependencies]

[dev-dependencies]
lazy_static = "1.4.0"
